<resources>
    <string name="app_name">Calc</string>
    <string name="num1">First digit</string>
    <string name="num2">Second  digit</string>
    <string name="plus">+</string>
    <string name="minus">-</string>
    <string name="multiply">*</string>
    <string name="divide">/</string>
    <string name="result">Result</string>
    <string name="extended">Show Extended</string>
    <string name="sqrt">√</string>
    <string name="pow">^</string>
    <string name="silnia">!</string>
    <string name="back">Back</string>
</resources>